--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Titre de la page</title>
-        <!--link rel="stylesheet" href="style.css"-->
         <script src="js/index.js"></script>
     </head>
     <body>
+        Hey
     </body>
 </html>
